<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:background="@drawable/edit_bg">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/navy"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/edit"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id_item"
            android:textColor="@color/navy"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/id"
            android:textSize="15sp"
            android:textStyle="bold"
            android:background="@drawable/edit_bg"
            android:padding="13dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_item"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/navy"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_item"
            android:textSize="15sp"
            android:textStyle="bold"
            android:background="@drawable/edit_bg"
            android:padding="13dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/sell_item"
            android:textColor="@color/navy"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/sales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sell_item"
            android:textSize="15sp"
            android:textStyle="bold"
            android:background="@drawable/edit_bg"
            android:padding="13dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/bought_item"
            android:textColor="@color/navy"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/purchase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bought_item"
            android:textSize="15sp"
            android:textStyle="bold"
            android:background="@drawable/edit_bg"
            android:padding="13dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/stock"
            android:textColor="@color/navy"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/stock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/stock"
            android:textSize="15sp"
            android:textStyle="bold"
            android:background="@drawable/edit_bg"
            android:padding="13dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

    </LinearLayout>

</LinearLayout>