<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.navigation.addtransaction.AddTransactionFragment">

    <TextView
        android:id="@+id/title_transaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/title_transaction"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_transaction"
        android:layout_width="410dp"
        android:layout_height="297dp"
        android:src="@drawable/transaction_img"
        app:layout_constraintBottom_toBottomOf="@+id/tv_id_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_transaction" />

    <TextView
        android:id="@+id/tv_id_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/id_item"
        android:textColor="@color/navy"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/img_transaction" />

    <EditText
        android:id="@+id/ed_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/id"
        android:padding="10dp"
        android:textSize="15sp"
        android:textColor="#A6000000"
        android:background="@drawable/bg_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_id_item" />

    <TextView
        android:id="@+id/tv_name_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textColor="@color/navy"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/ed_id"
        tools:layout_editor_absoluteX="20dp" />

    <EditText
        android:id="@+id/ed_stock_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/stock"
        android:padding="10dp"
        android:textSize="15sp"
        android:textColor="#A6000000"
        android:background="@drawable/bg_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_item" />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/blue_222"
        android:padding="20dp"
        android:text="@string/send"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/ed_stock_item"
        app:layout_constraintTop_toBottomOf="@+id/ed_stock_item" />


</androidx.constraintlayout.widget.ConstraintLayout>